--- a/index.html
+++ b/index.html
@@ -60,14 +60,22 @@
         }
 
         #addBtn {
-            width: 100%;
-            margin-top: 15px;
+            margin-left: 10px;
             background-color: #08d9d6;
             color: #162447;
         }
 
-        #addBtn:hover {
-            background-color: #00f0f0;
+        #addHabitForm {
+            display: flex;
+            margin-bottom: 15px;
+        }
+
+        #habitInput {
+            flex: 1;
+            padding: 8px 12px;
+            border-radius: 6px;
+            border: none;
+            font-size: 1rem;
         }
 
         footer {
@@ -83,8 +91,12 @@
 <header>👻 Habit Ghosts</header>
 
 <main>
+    <form id="addHabitForm">
+        <input type="text" id="habitInput" placeholder="Введите привычку..." />
+        <button type="submit" id="addBtn">Добавить</button>
+    </form>
+
     <div id="habits"></div>
-    <button id="addBtn">Добавить привычку</button>
 </main>
 
 <footer>Telegram Mini App Demo</footer>
@@ -92,16 +104,19 @@
 <script>
     const habits = [];
 
+    const habitInput = document.getElementById("habitInput");
+    const addForm = document.getElementById("addHabitForm");
+    const habitsContainer = document.getElementById("habits");
+
     function render() {
-        const container = document.getElementById("habits");
-        container.innerHTML = "";
+        habitsContainer.innerHTML = "";
 
         if (habits.length === 0) {
             const p = document.createElement("p");
             p.style.textAlign = "center";
             p.style.color = "#aaa";
             p.textContent = "Пока нет привычек. Добавьте первую!";
-            container.appendChild(p);
+            habitsContainer.appendChild(p);
             return;
         }
 
@@ -121,20 +136,24 @@
 
             div.appendChild(span);
             div.appendChild(delBtn);
-            container.appendChild(div);
+            habitsContainer.appendChild(div);
         });
     }
 
-    document.getElementById("addBtn").onclick = () => {
-        const h = prompt("Введите привычку:");
-        if (h && h.trim() !== "") {
-            habits.push(h.trim());
+    // Обработка формы
+    addForm.addEventListener("submit", (e) => {
+        e.preventDefault(); // предотвращаем перезагрузку страницы
+        const value = habitInput.value.trim();
+        if (value !== "") {
+            habits.push(value);
+            habitInput.value = ""; // очищаем поле
             render();
         }
-    };
+    });
 
     render();
 </script>
 
 </body>
 </html>
+
