--- a/index.html
+++ b/index.html
@@ -1,156 +1,60 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>👻 Habit Ghosts</title>
-<style>
-body {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #1a1a2e;
-    color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-header {
-    background-color: #162447;
-    padding: 20px;
-    text-align: center;
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-main {
-    flex: 1;
-    padding: 20px;
-}
-#addHabitForm {
-    display: flex;
-    margin-bottom: 15px;
-}
-#habitInput {
-    flex: 1;
-    padding: 10px;
-    border-radius: 6px;
-    border: none;
-    font-size: 1rem;
-}
-#addBtn {
-    margin-left: 10px;
-    padding: 10px;
-    border: none;
-    border-radius: 6px;
-    background-color: #08d9d6;
-    color: #162447;
-    font-weight: bold;
-    cursor: pointer;
-}
-#addBtn:hover {
-    background-color: #00f0f0;
-}
-.habit {
-    background-color: #1f4068;
-    padding: 12px 16px;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.habit button {
-    padding: 6px 10px;
-    border: none;
-    border-radius: 6px;
-    background-color: #e43f5a;
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-}
-.habit button:hover {
-    background-color: #ff6b81;
-}
-footer {
-    padding: 10px;
-    text-align: center;
-    font-size: 0.85rem;
-    background-color: #162447;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Registration</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-900 text-white flex items-center justify-center h-screen">
 
-<header>👻 Habit Ghosts</header>
+<div class="bg-gray-800 p-6 rounded-lg w-80 shadow-lg">
+  <h2 class="text-2xl font-bold mb-4 text-center">Setup Your Profile</h2>
 
-<main>
-<form id="addHabitForm">
-    <input type="text" id="habitInput" placeholder="Введите привычку..." />
-    <button type="submit" id="addBtn">Добавить</button>
-</form>
+  <!-- Цель -->
+  <label class="block mb-2 font-medium">Your Goal:</label>
+  <select id="userGoal" class="w-full mb-4 p-2 rounded text-black">
+    <option value="lose">Lose Weight</option>
+    <option value="gain">Gain Muscle</option>
+    <option value="maintain">Maintain</option>
+  </select>
 
-<div id="habits"></div>
-</main>
+  <!-- Вес -->
+  <label class="block mb-2 font-medium">Your Weight: <span id="weightValue">70</span> kg</label>
+  <input type="range" min="0" max="200" value="70" id="userWeight" class="w-full mb-4">
 
-<footer>Telegram Mini App Demo</footer>
+  <button id="saveUser" class="w-full bg-blue-800 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded transition-all duration-300 active:scale-95">
+    Save
+  </button>
+</div>
 
 <script>
-const habits = [];
+  const weightSlider = document.getElementById("userWeight");
+  const weightValue = document.getElementById("weightValue");
 
-const habitInput = document.getElementById("habitInput");
-const addForm = document.getElementById("addHabitForm");
-const habitsContainer = document.getElementById("habits");
+  // Динамически обновляем цифру при движении ползунка
+  weightSlider.addEventListener("input", () => {
+    weightValue.textContent = weightSlider.value;
+  });
 
-function render() {
-    habitsContainer.innerHTML = "";
+  // Пример отправки данных на сервер
+  document.getElementById("saveUser").addEventListener("click", async () => {
+    const goal = document.getElementById("userGoal").value;
+    const weight = weightSlider.value;
 
-    if (habits.length === 0) {
-        const p = document.createElement("p");
-        p.style.textAlign = "center";
-        p.style.color = "#aaa";
-        p.textContent = "Пока нет привычек. Добавьте первую!";
-        habitsContainer.appendChild(p);
-        return;
-    }
-
-    habits.forEach((habit, i) => {
-        const div = document.createElement("div");
-        div.className = "habit";
-
-        const span = document.createElement("span");
-        span.textContent = habit;
-
-        const delBtn = document.createElement("button");
-        delBtn.textContent = "Удалить";
-        delBtn.onclick = () => {
-            habits.splice(i, 1);
-            render();
-        };
-
-        div.appendChild(span);
-        div.appendChild(delBtn);
-        habitsContainer.appendChild(div);
+    await fetch("/register", {
+      method: "POST",
+      headers: { "Content-Type": "application/x-www-form-urlencoded" },
+      body: new URLSearchParams({
+        user_id: telegramUserId, // получаем из Telegram WebApp SDK
+        weight: weight,
+        target: goal
+      })
     });
-}
 
-// Обработка формы
-addForm.addEventListener("submit", (e) => {
-    e.preventDefault(); // предотвращаем перезагрузку страницы
-    const value = habitInput.value.trim();
-    if (value !== "") {
-        habits.push(value);
-        habitInput.value = ""; // очищаем поле
-        render();
-    }
-});
-
-render();
+    // Перенаправление на базовую страницу
+    window.location.href = `/home?user_id=${telegramUserId}`;
+  });
 </script>
 
 </body>
 </html>
-
-
-</body>
-</html>
-
